# auditive

./: LICENSE  README.md  changelog.txt  example-config  readme.txt
devel/: Makefile  dev-readme.txt
src/: CMakeLists.txt  auditive.1  auditive.c  c_funcs.c  config.c  console.c  debug.c  external.c  files.c  help.c  playlist.c  screen.c  viewlist.c  world.c
vala/: CMakeLists.txt  ValaPrecompile.cmake  auditive.vala  config.vala  console.vala  debug.vala  external.vala  files.vala  help.vala  playlist.vala  screen.vala  viewlist.vala  world.vala
